State and state machine

--- a/FlappyBird-SFML/FlappyBird-SFML.vcxproj
+++ b/FlappyBird-SFML/FlappyBird-SFML.vcxproj
@@ -148,7 +148,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Src\main.cpp" />
+    <ClCompile Include="Src\StateMachine.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Src\State.h" />
+    <ClInclude Include="Src\StateMachine.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
