--- a/FlappyBird-SFML/FlappyBird-SFML.vcxproj
+++ b/FlappyBird-SFML/FlappyBird-SFML.vcxproj
@@ -148,12 +148,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Src\MainMenuState.cpp" />
+    <ClCompile Include="Src\SplashState.cpp" />
+    <ClCompile Include="Src\Game.cpp" />
     <ClCompile Include="Src\AssetManager.cpp" />
     <ClCompile Include="Src\InputManager.cpp" />
     <ClCompile Include="Src\main.cpp" />
     <ClCompile Include="Src\StateMachine.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\MainMenuState.h" />
+    <ClInclude Include="Src\Log.h" />
+    <ClInclude Include="Src\SplashState.h" />
+    <ClInclude Include="Src\DEFINITIONS.h" />
+    <ClInclude Include="Src\Game.h" />
     <ClInclude Include="Src\AssetManager.h" />
     <ClInclude Include="Src\InputManager.h" />
     <ClInclude Include="Src\State.h" />
